--- a/source/sass/blocks/booking-form.scss
+++ b/source/sass/blocks/booking-form.scss
@@ -26,7 +26,7 @@
   }
 }
 
-.booking-form__title {
+.booking-form__wrapper > h3 {
   font-weight: 500;
   font-size: 18px;
   line-height: 27px;
@@ -43,17 +43,25 @@
   }
 }
 
-.booking-form__input {
+.booking-form__wrapper input {
   width: 100%;
   padding: 12px 14px;
   border-color: transparent;
 
-  & ~ & {
+  & ~ input {
     margin-top: 20px;
   }
 }
 
-.booking-form__control {
+.booking-form__checkbox {
+  margin-top: 17px;
+  color: $color-alice-blue;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 13px;
+}
+
+.booking-form__checkbox label {
   position: relative;
 }
 
@@ -74,7 +82,17 @@
   }
 }
 
-.booking-form__control-input {
+.booking-form__label {
+  padding-left: 23px;
+
+  @media (max-width: $vp-768 - 1) {
+    padding-left: 26px;
+    display: block;
+    line-height: 12px;
+  }
+}
+
+.booking-form__checkbox input {
   &:checked + .booking-form__mark::before {
     content: "";
     font-size: 30px;
@@ -86,24 +104,6 @@
     color: $color-alice-blue;
     width: 10px;
     height: 8px;
-  }
-}
-
-.booking-form__checkbox {
-  margin-top: 17px;
-  color: $color-alice-blue;
-  font-weight: 400;
-  font-size: 10px;
-  line-height: 13px;
-}
-
-.booking-form__label {
-  padding-left: 23px;
-
-  @media (max-width: $vp-768 - 1) {
-    padding-left: 26px;
-    display: block;
-    line-height: 12px;
   }
 }
 
