--- a/source/sass/blocks/presentation.scss
+++ b/source/sass/blocks/presentation.scss
@@ -30,7 +30,7 @@
   }
 }
 
-.presentation__title {
+.presentation__left-column h2 {
   font-style: normal;
   font-weight: 600;
   font-size: 28px;
@@ -51,7 +51,7 @@
   }
 }
 
-.presentation__text {
+.presentation__left-column p {
   font-size: 16px;
   line-height: 24px;
   margin: 0;
@@ -68,6 +68,35 @@
   }
 }
 
-.presentation__image {
+.presentation__image-wrapper {
+  @media (max-width: $vp-1366 - 1) {
+    position: relative;
+    width: 324px;
+    height: 264px;
+    overflow: hidden;
+  }
+
+  @media (max-width: $vp-768 - 1) {
+    width: 290px;
+    height: 186px;
+  }
+}
+
+.presentation__image-wrapper img {
   width: 100%;
+
+  @media (max-width: $vp-1366 - 1) {
+    position: absolute;
+    width: 324px;
+    height: 264px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    object-fit: cover;
+  }
+
+  @media (max-width: $vp-768 - 1) {
+    width: 290px;
+    height: 186px;
+  }
 }
