--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -12,10 +12,12 @@ $color-transparent:                 rgba(255, 255, 255, 0);
 
 $color-neon-blue:                   #2c39f2;
 $color-torch-red:                   #ff1553;
-$color-turquoise-blue:              #63daff;
+$color-prussian-blue:               #00336c;
 $color-alice-blue:                  #f9fbfd;
 $color-tangaroa:                    #011c40;
 $color-quartz:                      #d8d8d9;
+$color-solitude:                    #dbe6f4;
+$color-pattens-blue:                #d8effe;
 $color-black:                       rgba(0, 0, 0, 0.25);
 
 // Gradient
