--- a/source/sass/blocks/uncoming-cruises.scss
+++ b/source/sass/blocks/uncoming-cruises.scss
@@ -2,12 +2,12 @@
   padding: 110px 118px 120px;
 
 
-  @media (max-width: $vp-1366 - 1) {
+  @include vp-1365 {
     padding: 95px 60px;
     padding-bottom: 100px;
   }
 
-  @media (max-width: $vp-768 - 1) {
+  @include vp-767 {
     padding: 65px 25px;
   }
 }
@@ -21,13 +21,13 @@
   text-align: center;
   margin-bottom: 48px;
 
-  @media (max-width: $vp-1366 - 1) {
+  @include vp-1365 {
     font-size: 26px;
     line-height: 29px;
     margin-bottom: 54px;
   }
 
-  @media (max-width: $vp-768 - 1) {
+  @include vp-767 {
     font-size: 24px;
     line-height: 24px;
     margin-bottom: 35px;
@@ -44,12 +44,12 @@
   margin: 0;
   padding: 0;
 
-  @media (max-width: $vp-1366 - 1) {
+  @include vp-1365 {
     grid-template-columns: repeat(2, 1fr);
     gap: 30px;
   }
 
-  @media (max-width: $vp-768 - 1) {
+  @include vp-767 {
     grid-template-columns: repeat(1, 1fr);
     gap: 30px;
   }
@@ -59,13 +59,13 @@
   position: relative;
   color: $color-alice-blue;
 
-  @media (max-width: $vp-1366 - 1) {
+  @include vp-1365 {
     width: 309px;
     height: 386px;
     overflow: hidden;
   }
 
-  @media (max-width: $vp-768 - 1) {
+  @include vp-767 {
     width: 270px;
     height: 386px;
   }
@@ -82,12 +82,12 @@
   font-size: 18px;
   line-height: 27px;
 
-  @media (max-width: $vp-1366 - 1) {
+  @include vp-1365 {
     left: 35px;
     bottom: 27px;
   }
 
-  @media (max-width: $vp-768 - 1) {
+  @include vp-767 {
     left: 25px;
     bottom: 18px;
   }
@@ -112,12 +112,12 @@
   padding: 30px 25px;
   box-sizing: border-box;
 
-  @media (max-width: $vp-1366 - 1) {
+  @include vp-1365 {
     padding: 35px;
     padding-top: 30px;
   }
 
-  @media (max-width: $vp-768 - 1) {
+  @include vp-767 {
     padding: 35px 25px;
     padding-top: 29px;
   }
@@ -155,7 +155,7 @@
   display: block;
   height: 100%;
 
-  @media (max-width: $vp-1366 - 1) {
+  @include vp-1365 {
     width: 309px;
     height: 386px;
     position: absolute;
@@ -165,7 +165,7 @@
     object-fit: cover;
   }
 
-  @media (max-width: $vp-768 - 1) {
+  @include vp-767 {
     width: 270px;
     height: 386px;
   }
