--- a/source/sass/blocks/early-booking.scss
+++ b/source/sass/blocks/early-booking.scss
@@ -8,28 +8,28 @@
   background-size: cover;
   position: relative;
 
-  @media (min-resolution: $retina-dppx) {
+  @include retina {
     background-image: url("../img/early-booking-desktop@2x.webp");
   }
 
-  @media (max-width: $vp-1366 - 1) {
+  @include vp-1365 {
     padding-top: 100px;
     padding-bottom: 100px;
     height: 805px;
     background-image: url("../img/early-booking-tablet.webp");
 
-    @media (min-resolution: $retina-dppx) {
+    @include retina {
       background-image: url("../img/early-booking-tablet@2x.webp");
     }
   }
 
-  @media (max-width: $vp-768 - 1) {
+  @include vp-767 {
     padding-top: 65px;
     padding-bottom: 65px;
     height: 760px;
     background-image: url("../img/early-booking-mobile.webp");
 
-    @media (min-resolution: $retina-dppx) {
+    @include retina {
       background-image: url("../img/early-booking-mobile@2x.webp");
     }
   }
@@ -40,14 +40,14 @@
   top: 50%;
   transform: translateY(-50%);
 
-  @media (max-width: $vp-1366 - 1) {
+  @include vp-1365 {
     max-width: 450px;
     top: -12px;
     transform: translate(-50%, 0);
     left: 50%;
   }
 
-  @media (max-width: $vp-768 - 1) {
+  @include vp-767 {
     top: -8px;
   }
 }
@@ -60,14 +60,14 @@
   margin-bottom: 13px;
   max-width: 500px;
 
-  @media (max-width: $vp-1366 - 1) {
+  @include vp-1365 {
     font-size: 34px;
     line-height: 51px;
     text-align: center;
     margin-bottom: 5px;
   }
 
-  @media (max-width: $vp-768 - 1) {
+  @include vp-767 {
     font-size: 24px;
     line-height: 31px;
     margin-bottom: 15px;
@@ -80,13 +80,13 @@
   margin: 0;
   max-width: 355px;
 
-  @media (max-width: $vp-1366 - 1) {
+  @include vp-1365 {
     text-align: center;
     margin-left: auto;
     margin-right: auto;
   }
 
-  @media (max-width: $vp-768 - 1) {
+  @include vp-767 {
     font-size: 16px;
     line-height: 22px;
     max-width: 267px;
