--- a/source/sass/blocks/footer-nav.scss
+++ b/source/sass/blocks/footer-nav.scss
@@ -1,7 +1,7 @@
 .page-footer__logo-wrapper {
   margin-right: 40px;
 
-  @media (max-width: $vp-1366 - 1) {
+  @include vp-1365 {
     margin-right: 25px;
   }
 }
@@ -9,7 +9,7 @@
 .footer-nav__site-menu {
   margin-right: 349px;
 
-  @media (max-width: $vp-1366 - 1) {
+  @include vp-1365 {
     margin-right: 80px;
   }
 }
@@ -23,13 +23,13 @@
   margin: 0;
   padding: 0;
 
-  @media (max-width: $vp-1366 - 1) {
+  @include vp-1365 {
     font-size: 12px;
     line-height: 15px;
     column-gap: 25px;
   }
 
-  @media (max-width: $vp-768 - 1) {
+  @include vp-767 {
     flex-direction: column;
     row-gap: 15px;
   }
