--- a/source/sass/blocks/presentation.scss
+++ b/source/sass/blocks/presentation.scss
@@ -6,7 +6,7 @@
   column-gap: 88px;
   margin: 0 auto;
 
-  @media (max-width: $vp-1366 - 1) {
+  @include vp-1365 {
     column-gap: 30px;
     padding-top: 100px;
     padding-bottom: 93px;
@@ -39,7 +39,7 @@
   padding: 0;
   margin-bottom: 23px;
 
-  @media (max-width: $vp-1366 - 1) {
+  @include vp-1365 {
     font-size: 26px;
     line-height: 29px;
     margin-bottom: 21px;
@@ -62,14 +62,14 @@
   max-width: 560px;
   width: 100%;
 
-  @media (max-width: $vp-1366 - 1) {
+  @include vp-1365 {
     max-width: 324px;
     margin: auto;
   }
 }
 
 .presentation__image-wrapper {
-  @media (max-width: $vp-1366 - 1) {
+  @include vp-1365 {
     position: relative;
     width: 324px;
     height: 264px;
@@ -85,7 +85,7 @@
 .presentation__image-wrapper img {
   width: 100%;
 
-  @media (max-width: $vp-1366 - 1) {
+  @include vp-1365 {
     position: absolute;
     width: 324px;
     height: 264px;
