--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -5,7 +5,7 @@
   margin: 0;
   padding: 0;
 
-  @media (max-width: $vp-1366 - 1) {
+  @include vp-1365 {
     column-gap: 23px;
   }
 
@@ -17,7 +17,7 @@
 .social__button-ico {
   fill: $color-alice-blue;
 
-  @media (max-width: $vp-1366 - 1) {
+  @include vp-1365 {
     width: 16px;
     height: 16px;
   }
