--- a/source/sass/blocks/footer-nav.scss
+++ b/source/sass/blocks/footer-nav.scss
@@ -1,28 +1,14 @@
-.page-footer__logo-wrapper {
-  margin-right: 40px;
-
-  @include vp-1365 {
-    margin-right: 25px;
-  }
-}
-
 .footer-nav {
-  margin-right: 349px;
-
-  @include vp-1365 {
-    margin-right: 80px;
-  }
-}
-
-.footer-nav__list {
   display: flex;
   list-style-type: none;
   column-gap: 35px;
   margin: 0;
   padding: 0;
+  margin-right: 349px;
 
   @include vp-1365 {
     column-gap: 25px;
+    margin-right: 80px;
   }
 
   @include vp-767 {
@@ -30,6 +16,23 @@
     row-gap: 15px;
   }
 }
+
+// .footer-nav__list {
+//   display: flex;
+//   list-style-type: none;
+//   column-gap: 35px;
+//   margin: 0;
+//   padding: 0;
+
+//   @include vp-1365 {
+//     column-gap: 25px;
+//   }
+
+//   @include vp-767 {
+//     flex-direction: column;
+//     row-gap: 15px;
+//   }
+// }
 
 .footer-nav__link {
   color: $color-alice-blue;
