--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -33,6 +33,7 @@
 @import "blocks/early-booking";
 @import "blocks/booking-form";
 @import "blocks/location";
+@import "blocks/page-main";
 
 
 // ---------------------------------
