--- a/source/sass/blocks/early-booking.scss
+++ b/source/sass/blocks/early-booking.scss
@@ -10,18 +10,21 @@
 
   @include vp-1365 {
     grid-template-columns: unset;
-    align-items: flex-start;
+    display: flex;
+    flex-direction: column;
     padding-top: 88px;
     padding-bottom: 100px;
     min-height: 805px;
-    row-gap: 44px;
+    row-gap: 53px;
   }
 
   @include vp-767 {
     padding-top: 58px;
     padding-bottom: 65px;
     min-height: 760px;
-    row-gap: 31px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 34px;
   }
 }
 
