--- a/source/sass/blocks/footer-nav.scss
+++ b/source/sass/blocks/footer-nav.scss
@@ -14,8 +14,12 @@
 
   @include vp-767 {
     flex-direction: column;
-    row-gap: 15px;
+    row-gap: 16px;
   }
+}
+
+.footer-nav__item {
+  line-height: 0;
 }
 
 .footer-nav__link {
