--- a/source/sass/blocks/advantage.scss
+++ b/source/sass/blocks/advantage.scss
@@ -6,13 +6,12 @@
   @include vp-1365 {
     padding-top: 91px;
     padding-bottom: 100px;
-    min-height: 588px;
+    min-height: min-content;
   }
 
   @include vp-767 {
     padding-top: 56px;
-    padding-bottom: 64px;
-    min-height: 997px;
+    padding-bottom: 67px;
   }
 }
 
