--- a/source/sass/blocks/early-booking.scss
+++ b/source/sass/blocks/early-booking.scss
@@ -14,14 +14,13 @@
     flex-direction: column;
     padding-top: 88px;
     padding-bottom: 100px;
-    min-height: 805px;
+    min-height: min-content;
     row-gap: 53px;
   }
 
   @include vp-767 {
     padding-top: 58px;
     padding-bottom: 65px;
-    min-height: 760px;
     display: flex;
     flex-direction: column;
     row-gap: 34px;
