for_test_ver3_popupMenu

--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -21,10 +21,10 @@
   @include vp-767 {
     display: block;
     position: absolute;
-    width: 13px;
-    height: 13px;
-    top: 0;
-    right: 15px;
+    width: 24px;
+    height: 12px;
+    top: 5px;
+    right: 0;
     background-color: transparent;
     border: none;
     cursor: pointer;
@@ -35,8 +35,8 @@
   .main-nav__toggle::before {
     content: "";
     position: absolute;
-    top: 5px;
-    left: 4px;
+    top: 0;
+    left: 0;
     width: 24px;
     height: 2px;
     background-color: $color-alice-blue;
@@ -78,8 +78,8 @@
       position: absolute;
       width: 18px;
       height: 2px;
-      top: 10px;
-      left: 12px;
+      top: 6px;
+      left: 8px;
       background-color: $color-tangaroa;
       z-index: 3;
     }
@@ -126,8 +126,8 @@
     display: flex;
     flex-direction: column;
     top: -20px;
-    right: -20px;
-    width: 100%;
+    right: -15px;
+    width: 98%;
     margin: auto;
     z-index: 1;
     background-color: $color-alice-blue;
