for_test_ver3_overlay

--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -3,6 +3,7 @@
   font-size: 14px;
   font-weight: 400;
   font-style: normal;
+  background-color: $color-alice-blue;
   color: $color-tangaroa;
   margin: 0;
   display: flex;
