--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -27,6 +27,7 @@
   @media (hover: hover), screen and (min-width: 0\0) {
     &:hover,
     &:focus {
+      outline: none;
       opacity: 0.8;
     }
   }
