--- a/source/sass/blocks/footer-nav.scss
+++ b/source/sass/blocks/footer-nav.scss
@@ -15,6 +15,7 @@
   @include vp-767 {
     flex-direction: column;
     row-gap: 16px;
+    margin-bottom: 25px;
   }
 }
 
@@ -34,5 +35,6 @@
 
   &:hover {
     cursor: pointer;
+    color: $color-maya-blue;
   }
 }
