--- a/source/sass/blocks/location.scss
+++ b/source/sass/blocks/location.scss
@@ -138,4 +138,12 @@
   &::before {
     background-image: url("../img/svg/phone.svg");
   }
+
+  &:hover::before {
+    background-image: url("../img/svg/phone-hover.svg");
+  }
+
+  &:hover {
+    color: $color-maya-blue;
+  }
 }
