--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -17,7 +17,7 @@
     padding-top: 40px;
     padding-bottom: 40px;
     align-items: flex-start;
-    row-gap: 29px;
+    row-gap: unset;
   }
 }
 
@@ -27,6 +27,11 @@
 
   @include vp-1365 {
     margin-right: 25px;
+  }
+
+  @include vp-767 {
+    margin-right: auto;
+    margin-bottom: 30px;
   }
 }
 
@@ -42,5 +47,9 @@
   @include vp-767 {
     width: 42px;
     height: 22px;
+  }
+
+  &:hover {
+    fill: $color-maya-blue;
   }
 }
