--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -1,6 +1,7 @@
 .social__list {
   display: flex;
   list-style-type: none;
+  align-items: center;
   column-gap: 28px;
   margin: 0;
   padding: 0;
@@ -10,12 +11,23 @@
   }
 
   @include vp-767 {
-    column-gap: 19px;
+    column-gap: 13px;
   }
 }
 
 .social__item {
   line-height: 0;
+}
+
+.social__button {
+  @include vp-767 {
+    display: block;
+    padding: 3px;
+
+    &--fb {
+      padding-left: 0;
+    }
+  }
 }
 
 .social__button-ico {
@@ -24,5 +36,9 @@
   @include vp-1365 {
     width: 16px;
     height: 16px;
+  }
+
+  &:hover {
+    fill: $color-maya-blue;
   }
 }
