--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -18,7 +18,9 @@ $color-tangaroa:                    #011c40;
 $color-quartz:                      #d8d8d9;
 $color-solitude:                    #dbe6f4;
 $color-pattens-blue:                #d8effe;
+$color-maya-blue:                   #87baff;
 $color-black:                       rgba(0, 0, 0, 0.25);
+$color-link-water:                  #c7ced7;
 
 // Gradient
 
