--- a/source/sass/blocks/uncoming-cruises.scss
+++ b/source/sass/blocks/uncoming-cruises.scss
@@ -95,22 +95,22 @@
   }
 }
 
-.uncoming-cruises__item:hover {
+.uncoming-cruises__item:hover,
+.uncoming-cruises__item:focus {
   .uncoming-cruises__item-description {
     display: block;
-    position: absolute;
+    position: relative;
     background-color: $color-tangaroa;
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: hidden;
-    z-index: 3;
+    overflow: scroll;
+    z-index: 2;
   }
 }
 
 
 .uncoming-cruises__item-description {
-  display: none;
   padding: 30px 25px;
   box-sizing: border-box;
 
