--- a/source/sass/blocks/uncoming-cruises.scss
+++ b/source/sass/blocks/uncoming-cruises.scss
@@ -2,7 +2,7 @@
   padding: 110px 118px 120px;
 
 
-  @include vp-1365 {
+  @include vp-1023 {
     padding: 95px 60px;
     padding-bottom: 100px;
   }
@@ -22,7 +22,7 @@
   text-align: center;
   margin-bottom: 48px;
 
-  @include vp-1365 {
+  @include vp-1023 {
     font-size: 26px;
     line-height: 29px;
     margin-bottom: 54px;
@@ -45,7 +45,7 @@
   margin: 0;
   padding: 0;
 
-  @include vp-1365 {
+  @include vp-1023 {
     grid-template-columns: repeat(2, 1fr);
     gap: 30px;
   }
@@ -61,7 +61,7 @@
   color: $color-alice-blue;
 
 
-  @include vp-1365 {
+  @include vp-1023 {
     width: 309px;
     height: 386px;
     overflow: hidden;
@@ -84,7 +84,7 @@
   font-size: 18px;
   line-height: 27px;
 
-  @include vp-1365 {
+  @include vp-1023 {
     left: 35px;
     bottom: 27px;
   }
@@ -96,10 +96,10 @@
 }
 
 .uncoming-cruises__item:hover,
-.uncoming-cruises__item:focus {
+.uncoming-cruises__item:focus-within {
   .uncoming-cruises__item-description {
     display: block;
-    position: relative;
+    position: absolute;
     background-color: $color-tangaroa;
     top: 0;
     width: 100%;
@@ -111,10 +111,11 @@
 
 
 .uncoming-cruises__item-description {
+  display: none;
   padding: 30px 25px;
   box-sizing: border-box;
 
-  @include vp-1365 {
+  @include vp-1023 {
     padding: 35px;
     padding-top: 30px;
   }
@@ -162,7 +163,7 @@
   display: block;
   height: 100%;
 
-  @include vp-1365 {
+  @include vp-1023 {
     width: 309px;
     height: 386px;
     position: absolute;
