for_test_ver3_change_breakpoint_from_1366_to_1024

--- a/source/sass/blocks/early-booking.scss
+++ b/source/sass/blocks/early-booking.scss
@@ -1,8 +1,5 @@
 .early-booking__wrapper {
-  padding-top: 50px;
-  padding-bottom: 50px;
-  padding-left: 163px;
-  padding-right: 163px;
+  padding: 50px 12%;
   min-height: 555px;
   display: grid;
   grid-template-columns: 1fr 403px;
