--- a/source/sass/blocks/location.scss
+++ b/source/sass/blocks/location.scss
@@ -2,7 +2,7 @@
   padding-top: 120px;
   padding-bottom: 120px;
   display: flex;
-  column-gap: 100px;
+  column-gap: 8.5%;
   line-height: 0;
 
   @include vp-1023 {
@@ -21,6 +21,10 @@
 
 .location__map-wrapper {
   position: relative;
+  min-width: 300px;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 
   @include vp-767 {
     width: 100%;
@@ -37,6 +41,7 @@
   @include vp-767 {
     width: 100%;
     height: 316px;
+    min-width: auto;
   }
 }
 
@@ -81,6 +86,11 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  width: 89%;
+
+  @include vp-1023 {
+    width: 100%;
+  }
 
   @include vp-767 {
     order: -1;
