--- a/source/sass/blocks/uncoming-cruises.scss
+++ b/source/sass/blocks/uncoming-cruises.scss
@@ -36,9 +36,9 @@
 }
 
 .uncoming-cruises__list {
-  display: grid;
-  justify-items: center;
-  grid-template-columns: repeat(4, 1fr);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   list-style-type: none;
   column-gap: 30px;
   row-gap: 30px;
@@ -46,6 +46,8 @@
   padding: 0;
 
   @include vp-1023 {
+    display: grid;
+    justify-items: center;
     grid-template-columns: repeat(2, 1fr);
     gap: 30px;
   }
