--- a/source/sass/global/container.scss
+++ b/source/sass/global/container.scss
@@ -2,7 +2,7 @@
   width: 100%;
   max-width: 1366px;
   margin: 0 auto;
-  padding: 0 103px;
+  padding: 0 7.5%;
 
   @include vp-1023 {
     padding: 0 45px;
