--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -175,6 +175,8 @@
     font-size: 18px;
     line-height: 22px;
     font-weight: 500;
+    padding: 10px 10px;
+    padding-left: 0;
 
     & + & {
       margin-top: 18px;
