--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -175,8 +175,7 @@
     font-size: 18px;
     line-height: 22px;
     font-weight: 500;
-    padding: 10px 10px;
-    padding-left: 0;
+    padding: 10px 20px 10px 0;
 
     & + & {
       margin-top: 18px;
