for_test_ver4_popup-menu-heigh-100vh

--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -147,7 +147,7 @@
     margin: auto;
     z-index: 1;
     background-color: $color-alice-blue;
-    min-height: 568px;
+    min-height: 100vh;
     padding-top: 85px;
     padding-right: 25px;
     padding-left: 25px;
