for_test_ver4_non-interactive-logo-on-index

--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -35,6 +35,12 @@
   }
 }
 
+.page-footer__logo {
+  &--index:hover {
+    cursor: auto;
+  }
+}
+
 
 .page-footer__logo-image {
   fill: $color-alice-blue;
@@ -49,7 +55,7 @@
     height: 22px;
   }
 
-  &:hover {
+  &:not(.page-footer__logo-image--index):hover {
     fill: $color-maya-blue;
   }
 }
