--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -91,8 +91,8 @@
   line-height: 0;
   margin-right: 15px;
 
-  &:hover {
-    cursor: pointer;
+  &--index:hover {
+    cursor: auto;
   }
 }
 
@@ -109,7 +109,7 @@
     height: 22px;
   }
 
-  &:hover {
+  &:not(.page-header__logo-image--index):hover {
     fill: $color-maya-blue;
   }
 }
