--- a/source/sass/blocks/advantage.scss
+++ b/source/sass/blocks/advantage.scss
@@ -38,8 +38,8 @@
 }
 
 .advantage__list {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 31%);
   list-style-type: none;
   column-gap: 3.5%;
   row-gap: 40px;
@@ -47,11 +47,13 @@
   padding: 0;
 
   @include vp-1023 {
+    grid-template-columns: repeat(auto-fit, 30.5%);
     column-gap: 28px;
     row-gap: 30px;
   }
 
   @include vp-767 {
+    grid-template-columns: repeat(auto-fit, 100%);
     flex-direction: column;
     row-gap: 30px;
   }
@@ -59,7 +61,6 @@
 
 .advantage__item {
   padding: 81px 30px 26px 30px;
-  width: 31%;
   background-color: $color-alice-blue;
   position: relative;
 
@@ -109,11 +110,9 @@
 
   @include vp-1023 {
     padding: 71px 10px 20px 21px;
-    width: 30.5%;
   }
 
   @include vp-767 {
-    width: auto;
     padding: 70px 20px 20px 20px;
   }
 }
