--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -24,6 +24,7 @@
 .page-footer__logo-wrapper {
   line-height: 0;
   margin-right: 40px;
+  margin-bottom: auto;
 
   @include vp-1023 {
     margin-right: 25px;
