--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -1,5 +1,11 @@
 .social {
   margin-left: auto;
+  margin-bottom: auto;
+  margin-top: 10px;
+
+  @include vp-1023 {
+    margin-top: 1px;
+  }
 
   @include vp-767 {
     margin-left: 0;
@@ -8,9 +14,11 @@
 
 .social__list {
   display: flex;
+  flex-wrap: wrap;
   list-style-type: none;
   align-items: center;
   column-gap: 28px;
+  row-gap: 15px;
   margin: 0;
   padding: 0;
 
