--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,19 +1,18 @@
 .page-header__wrapper {
   padding-top: 35px;
   padding-bottom: 35px;
-  height: 650px;
+  min-height: 650px;
 
   @include vp-1023 {
     padding-top: 28px;
     padding-bottom: 30px;
-    height: 638px;
+    min-height: 638px;
   }
 
   @include vp-767 {
     padding-top: 20px;
     padding-bottom: 20px;
     min-height: 500px;
-    height: unset;
   }
 }
 
