--- a/source/sass/blocks/footer-nav.scss
+++ b/source/sass/blocks/footer-nav.scss
@@ -7,10 +7,12 @@
   padding: 0;
   margin-right: 15px;
   margin-top: 10px;
+  margin-bottom: auto;
 
   @include vp-1023 {
     column-gap: 25px;
-    margin-right: 80px;
+    margin-right: 15px;
+    margin-top: 0;
   }
 
   @include vp-767 {
