--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -17,17 +17,22 @@
   grid-template-columns: repeat(3, 1fr);
   list-style-type: none;
   align-items: center;
-  min-width: 109px;
+  max-width: 109px;
   column-gap: 23px;
   row-gap: 15px;
   margin: 0;
   padding: 0;
 
   @include vp-1023 {
-    column-gap: 23px;
+    column-gap: 20px;
+    max-width: 87px;
   }
 
   @include vp-767 {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    max-width: unset;
     column-gap: 13px;
   }
 }
